# Generalized-logistic-distribution-of-type-III

./: CMakeLists.txt
Part I/src/: distribution.cpp  distribution.hpp  emp_distribution.cpp  emp_distribution.hpp  mix_distribution.cpp  spec_func.cpp
Part II/src/: distribution.cpp  distribution.hpp  emp_distribution.cpp  emp_distribution.hpp  main.cpp  mix_distribution.cpp  mix_distribution.hpp
Part III/: CMakeLists.txt
Part III/src/: distribution.cpp  distribution.hpp  emp_distribution.cpp  emp_distribution.hpp  interface.hpp  mix_distribution.cpp  mix_distribution.hpp  spec_func.hpp
src/: main.cpp  mix_distribution.cpp  mix_distribution.hpp
